# ITS_A-Real-Time-Driver-Fatigue-Alert-System

./: .dockerignore  .gitignore  ALERT_HISTORY_IMPLEMENTATION.md  CHANGELOG.md  COMPLETE_BUILD_DOCUMENTATION.md  CONTRIBUTING.md  DOCKER_STATUS.md  Dockerfile  Dockerfile.light  IMPLEMENTATION_SUMMARY.md  ITS_Test_Plan_and_Cases.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  PYINSTALLER_STATUS.md  QUICKSTART.md  README-GITHUB-READY.md  README.md  SETUP_GUIDE.md  VERIFY.md  WORKFLOW_FIXES.md  WORKFLOW_STATUS.md  build-all.ps1  build-installer-windows.bat  build-installer-windows.ps1  build-linux.sh  build-macos.sh  build-windows.ps1  camera_production_solution.py  deploy-docker.ps1  deploy-docker.sh  docker-compose.yml  fix-pyz-error.ps1  fix-pyz-onefile.ps1  gui_launcher.py  launcher.py  pyproject.toml  requirements-development-guide.txt  requirements-pip.txt  requirements-production-guide.txt  (+6 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-only.yml  build-windows.yml  ci-fixed.yml  ci.yml  docker.yml  github-packages.yml  installer-fixed.yml  installer.yml  realease-beta.yml  release-beta.yml  release-production.yml  upload_artifact.yml
assets/: fatigue-detection.desktop
assets/demo/: README.md
config/: setting.json
docs/: BUILD_APP.md  DOCKER_DEPLOYMENT.md  INSTALLER_LINUX.md  INSTALLER_MAC.md  INSTALLER_WINDOWS.md  MACOS_CODE_SIGNING.md  MACOS_LINUX_BUILD_COMPLETE.md  PUBLISHING.md  PYINSTALLER_COMPLETE.md  USAGE.md
installer/: setup.nsi
installer/windows/: installer.nsi
src/: __init__.py
src/app/: config.py  main.py
src/input_layer/: camera_handler.py  input_validator.py  optimized_input_config.py  performance_camera_config.py  quality_manager.py  roi_detector.py
src/output_layer/: alert_history.py  alert_module.py  logger.py
src/output_layer/ui/: main_window.py  simple_welcome.py  welcome_screen.py
src/processing_layer/detect_landmark/: debug_landmark.py  landmark.py
src/processing_layer/detect_rules/: ear.py  enhanced_integration.py  head_pose.py  mar.py  optimized_integration.py  optimized_thresholds.py
src/processing_layer/vision_processor/: __init__.py  adaptive_timing.py  detection_config.py  detection_enums.py  detector_factory.py  rule_based.py  state_analyzers.py
