[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driver-fatigue-alert"
version = "1.0.0"
description = "Real-time Driver Fatigue Alert System."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    {name = "Dat"}
]

dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
