[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driver-fatigue-alert"
version = "1.0.0"
description = "Real-time Driver Fatigue Alert System."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    {name = "Dat"}
]

dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe==0.10.14",
    "numpy>=1.21.0",
    "imutils>=0.5.4",
    "Pillow>=9.0.0",
    "pygame>=2.1.0",
    "my-internal-lib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
